--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>skill-bucks</name>
 	<description>Backend for the SKill Bucks Web App</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,6 +68,28 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+   			<groupId>io.jsonwebtoken</groupId>
+   			<artifactId>jjwt-api</artifactId>
+   			<version>0.11.5</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>io.jsonwebtoken</groupId>
+   			<artifactId>jjwt-impl</artifactId>
+   			<version>0.11.5</version>
+    		<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+    		<groupId>io.jsonwebtoken</groupId>
+    		<artifactId>jjwt-jackson</artifactId>
+    		<version>0.11.5</version>
+    		<scope>runtime</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
