backend upto login and register

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,12 @@ spring.servlet.multipart.max-request-size=10MB
 project.image=images/
 
 logging.level.org.springframework.security=DEBUG
+
+####### Email Properties ######
+##smtp mail properties
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=amnrj1622@gmail.com
+#spring.mail.password=zsemeusbaoyazajb
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
