--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,6 @@ logging.level.org.springframework.security=DEBUG
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
 #spring.mail.username=amnrj1622@gmail.com
-#spring.mail.password=zsemeusbaoyazajb
+#spring.mail.password= your smtp password
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
